<resources>
    <string name="app_name">ルームリモコン</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="btn_on">ON</string>
    <string name="btn_off">OFF</string>
    <string name="btn_small">SMALL</string>
    <string name="btn_cooler">COOLER</string>
    <string name="btn_heater">HEATER</string>
    <string name="head_light">Light</string>
    <string name="head_air">Air Conditioner</string>
</resources>